--- a/styles/reset.css
+++ b/styles/reset.css
@@ -10,6 +10,7 @@
   border: 0;
   font-size: 100%;
   font: inherit;
+  color: var(--clr-base);
 }
 
 ::before,
